--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ IDLE_TIMEOUT=255
 # Model mappings to redirect requests from one model to another
 # Format: "source1:target1,source2:target2"
 # Example: "claude-sonnet-4-20250514:claude-opus-4,gpt-4:gpt-4-turbo"
-MODEL_MAPPINGS="claude-opus-4-5-20251101:claude-opus-4.5"
+MODEL_MAPPINGS="claude-sonnet-4-5-20250929:claude-sonnet-4.5,claude-opus-4-5-20251101:claude-opus-4.5,claude-haiku-4-5-20251001:claude-haiku-4.5"
