--- a/.env
+++ b/.env
@@ -14,4 +14,4 @@ IDLE_TIMEOUT=255
 # Format: "source1:target1,source2:target2"
 # Example: "claude-sonnet-4-20250514:claude-opus-4,gpt-4:gpt-4-turbo"
 # MODEL_MAPPINGS="claude-sonnet-4-5-20250929:claude-sonnet-4.5,claude-opus-4-5-20251101:claude-opus-4.5,claude-haiku-4-5-20251001:claude-haiku-4.5"
-MODEL_MAPPINGS="claude-opus-4-6:claude-opus-4.6,claude-sonnet-4-5:claude-sonnet-4.5,claude-opus-4-5:claude-opus-4.5,claude-haiku-4-5:claude-haiku-4.5"
+MODEL_MAPPINGS="claude-opus-4-6:claude-opus-4.6,claude-opus-4-5:claude-opus-4.5,claude-sonnet-4-5:claude-sonnet-4.5,claude-opus-4-5:claude-opus-4.5,claude-haiku-4-5:claude-haiku-4.5"
